k8s/traefik/config/middleware-compress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: compress
  namespace: traefik-system
spec:
  compress: {}
