k8s/traefik/config/middleware-rate-limit.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: rate-limit
  namespace: traefik-system
spec:
  rateLimit:
    average: 100
    burst: 200
    period: 1s
